--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^0.18.3",
     "hono": "^4.6.16"
   },
   "devDependencies": {
