--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "wrangler dev",
     "lint": "eslint .",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "lint:fix": "eslint . --fix",
     "deploy": "wrangler deploy --minify"
   },
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.2",
     "@cloudflare/workers-types": "^4.20241218.0",
+    "@vitest/coverage-v8": "2.1.8",
     "eslint": "^9.17.0",
     "vitest": "^2.1.8",
     "wrangler": "^3.102.0"
